--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -62,3 +62,20 @@ title = {{CapTable and CapShelf - Unobtrusive Activity Recognition Using Network
 volume = {Networked },
 year = {2007}
 }
+@inproceedings{berlin_laerhoven_tei_2010,
+	author = {Berlin, Eugen and Liu, Jun and van Laerhoven, Kristof and Schiele, Bernt},
+	title = {Coming to Grips with fhe Objects We Grasp: Detecting Interactions with Efficient Wrist-Worn Sensors},
+	booktitle = {Proceedings of the Fourth International Conference on Tangible, Embedded, and Embodied Interaction},
+	series = {TEI '10},
+	year = {2010},
+	isbn = {978-1-60558-841-4},
+	location = {Cambridge, Massachusetts, USA},
+	pages = {57--64},
+	numpages = {8},
+	url = {http://doi.acm.org/10.1145/1709886.1709898},
+	doi = {10.1145/1709886.1709898},
+	acmid = {1709898},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {gesture detection, wearable interaction, wrist-worn RFID},
+} 
