--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -1,59 +1,67 @@
-
-
 \documentclass[runningheads,a4paper]{llncs}
 
 \usepackage{amssymb}
 \setcounter{tocdepth}{3}
 \usepackage{graphicx}
+\usepackage{booktabs}
 
 \usepackage{url}
-\urldef{\mailcf}\path|{berlin,borazio}@ess.informatik.tu-darmstadt.de, tobias.grosse-puppendahl@igd.fraunhofer.de|
-\newcommand{\keywords}[1]{\par\addvspace\baselineskip
-\noindent\keywordname\enspace\ignorespaces#1}
+% \urldef{\mailcf}\path|{berlin,borazio}@ess.informatik.tu-darmstadt.de, tobias.grosse-puppendahl@igd.fraunhofer.de|
+% \newcommand{\keywords}[1]{\par\addvspace\baselineskip
+% \noindent\keywordname\enspace\ignorespaces#1}
 
 \begin{document}
 
 \mainmatter  % start of an individual contribution
 
 % first the title is needed
-\title{Enhancing accelerometer-based activity recognition with capacitive proximity sensing}
+\title{Enhancing Accelerometer-based Activity Recognition with Capacitive Proximity Sensing}
 
 % a short form should be given in case it is too long for the running head
-\titlerunning{Enhancing accelerometer-based activity recognition}
+\titlerunning{Enhancing Accelerometer-based Activity Recognition}
 
 % the name(s) of the author(s) follow(s) next
-\author{Eugen Berlin, Marko Borazio, Tobias Grosse-Puppendahl}
+\author{Tobias Grosse-Puppendahl\inst{1} \and Eugen Berlin\inst{2} \and Marko Borazio\inst{2} }
 %
-\authorrunning{Enhancing accelerometer-based activity recognition}
+\authorrunning{Enhancing Accelerometer-based Activity Recognition}
 % (feature abused for this document to repeat the title also on left hand pages)
 
 % the affiliations are given next; don't give your e-mail address
 % unless you accept that it will be published
-\institute{TU Darmstadt, Karolinenplatz 5, 64289 Darmstadt, Germany\\
-Fraunhofer IGD, Fraunhoferstr. 5, 64283 Darmstadt, Germany\\
-\mailcf\\
+\institute{
+	Fraunhofer IGD, Fraunhoferstr. 5, 64283 Darmstadt, Germany\\
+	\email{tobias.grosse-puppendahl@igd.fraunhofer.de}
+	\and
+	Technische Universit\"at Darmstadt, Hochschulstr. 10, 64289 Darmstadt, Germany\\
+	\email{\{berlin,borazio\}@ess.tu-darmstadt.de}
 }
 
-\toctitle{Enhancing accelerometer-based activity recognition with capacitive proximity sensing}
+% \toctitle{Enhancing Accelerometer-based Activity Recognition with Capacitive Proximity Sensing}
+% \tocauthor{Eugen Berlin, Marko Borazio, Tobias Grosse-Puppendahl}
 
-\tocauthor{Eugen Berlin, Marko Borazio, Tobias Grosse-Puppendahl}
 \maketitle
 \begin{abstract}
 Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz! " quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. 
-\keywords{AAL, capacitive proximity sensors, classification, user context}
+\keywords{ambient assisted living, capacitive proximity sensors, activity recognition, user context}
 \end{abstract}
 
 \section{Introduction}
-Current wearable activity recognizing systems are able to unobtrusively recognize a person’s activities throughout the whole day. These systems often apply accelerometer-based data recordings to identify the activities performed. However, it is a great challenge to identify fine-grained activities just by using this single modality. In this paper, we use an accelerometer-based activity recognition system, the wrist-worn HedgeHog device \cite{HedgeHog}. We investigate the possibility of integrating a capacitive proximity sensor unobtrusively into the wristband to obtain higher recognition rates for several activities in daily life.
-Capacitive proximity sensors can indirectly measure the distance and nature of a grounded object within reach. This means that the measurement result depends on the object’s distance, its size and the material it is made of. A wristband worn capacitive proximity sensor requires a shield that eliminates the influence of the grounded arm directly underneath the sensor. Using this setup, we can detect the proximity to a grounded object in the environments for distances up to 20 cm. Especially for mobile devices, it is required that the sensor only draws a very small amount of power. Thus, other proximity sensing input modalities like ultrasound or optical measurements are not applicable for this type of mobile application.
+Current wearable activity recognition systems are able to unobtrusively capture and recognize a person's activities throughout the whole day. These systems often rely on inertial sensor data that is captured by wearable sensors attached to the body to identify the activities performed. However, it is a great challenge to identify fine-grained activities just by using this single modality. In this paper, we use an accelerometer-based activity recognition system, the wrist-worn activity logger called HedgeHog\footnote{\url{http://www.ess.tu-darmstadt.de/hedgehog}} and investigate the possibility of integrating a capacitive proximity sensor unobtrusively into the wristband to obtain higher recognition rates for several activities in daily life.
+
+Capacitive proximity sensors can indirectly measure the distance and nature of a grounded object within reach. This means that the measurement result depends on the object's distance, its size and the material it is made of. A wristband worn capacitive proximity sensor requires a shield that eliminates the influence of the grounded arm directly underneath the sensor. Using this setup, we can detect the proximity to a grounded object in the environments for distances up to 20 cm. Especially for mobile devices, it is required that the sensor only draws a very small amount of power. Thus, other proximity sensing input modalities like ultrasound or optical measurements are not applicable for this type of mobile application.
 
 [MB; EB: Introduction to HedgeHog device]
 
-There are several intuitive examples for which a combination of accelerometer-based activity recognition with a capacitive proximity sensor reveals its strength. For example, it may be conducted which material is placed underneath the hand. The capacitive proximity sensor would return a different measurement result for a hand placed on a couch covered with fabric than a hand placed a wooden table. Moreover, the approximate distance to objects can be exploited to identify activities like grasping into a locker or a refridgerator to prepare food.
+There are several intuitive examples for which a combination of accelerometer-based activity recognition with a capacitive proximity sensor reveals its strength. For example, it may be conducted which material is placed underneath the hand. The capacitive proximity sensor would return a different measurement result for a hand placed on a couch covered with fabric than a hand placed a wooden table. Moreover, the approximate distance to objects can be exploited to identify activities like grasping into a locker or a refrigerator  to prepare food.
 
 \section{Related Work}
 
 [MB; EB: Related Work activity recognition]
+
+
+
+Berlin et al. \cite{berlin_laerhoven_tei_2010} have augmented an accelerometer based sensor node with an RFID bracelet to be able to detect objects a human is interacting with. Thus, activities can use this additional modality 
+
 
 In the field of capacitive proximity sensing, three different measurement modes shown in Figure \ref{fig:modes} were identified by Smith et al. \cite{Smith1999}: transmit mode, shunt mode and loading mode. Transmit mode is based on a varying electric potential coupled to an object that can be measured by a capacitive proximity sensor next to that object. Shunt mode applies two electrodes, a transmit and a receive electrode, that can measure capacitance changes produced by objects disturbing the electric field between the two electrodes. In loading mode, a single electrode builds up an electric field to any grounded object in the environment. By measuring the capacitance, conclusions can be made upon the proximity and nature of an object. In our work we apply loading mode since it requires only a single electrode that can be integrated invisibly into the wristband.
 
@@ -63,12 +71,18 @@ In previous works, capacitive proximity sensors were applied in various fields o
 
 \section{Hardware}
 \subsection{HedgeHog}
-The HedgeHog sensor is a custom designed and built wearable data logger aiming at long-term deployments in activity recognition scenarios. Due to its small size (30x25x20mm) and weight, this sensor, being worn at the wrist, is an unobtrusive way to record relevant motion data.
+The HedgeHog sensor is a custom designed and built wearable data logger aiming at long-term deployments in activity recognition scenarios. Due to its small form-factor (30x25x20mm) and weight, this sensor, being worn at the wrist, is an unobtrusive way to record relevant motion data.
 
-The HedgeHog sensor is built around the low-power Microchip microcontroller (PIC18F46J50) featuring an accelerometer sensor (ADXL345) to capture human motion, light and ambient temperature sensors and a microSD flash card for locally storing the sensor data. The sensor is powered by a $200mAh$ lithium polymer battery, which allows two weeks of continuous recording on a single battery charge. A plastic case is used to nicely package and protect the sensor to be worn at the wrist.
+The HedgeHog sensor is built around the low-power Microchip microcontroller (PIC18F46J50) featuring an accelerometer sensor (ADXL345) to capture human motion, light and ambient temperature sensors and a microSD flash card for locally storing the sensor data. The sensor is powered by a $200mAh$ lithium polymer battery, which allows for two weeks of continuous recording on a single battery charge. A plastic case is used to nicely package and protect the sensor to be worn at the wrist (as shown in Fig. \ref{fig:sensornode}).
 
-\includegraphics[width=.75\textwidth]{sensor.png}
-The accelerometer sensor is being sampled at $100Hz$, resulting in 10ms equidistant measurements. For efficiency reasons, the sensor data is being run length encoded before being stored locally.
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{Images/hardware_sensor.jpg}
+	\caption{The inertial data logger featuring a low-power microcontroller, a 3 axis accelerometer, a microSD flash card for storing the sensor data and a USB connector for accessing the stored data (on the left) is being powered by a small lithium polymer battery and is packaged into a plastic case to be worn at the wrist (a version with a OLED display on the right).}
+	\label{fig:sensornode}
+\end{figure}
+
+The 3D accelerometer sensor is being sampled at $100Hz$, resulting in 10ms equidistant measurements. For efficiency reasons, the sensor data is run-length encoded before being stored locally to the microSD card.
 
 The HedgeHog can be extended with further sensors tailoring different application scenarios. For our scenario, we have added a capacitive proximity sensor, which is described in detail in the next section.
 
@@ -80,7 +94,7 @@ image : board layout and schematics !
 
 The capacitive proximity sensor for the wristband performs measurements in loading mode. The sensing circuit schematic is shown in Figure \ref{}. It is based on a timer that controls the charging and discharging cycles of the virtual capacitor. The timer toggles from charge to discharge at the time when a threshold voltage at the capacitor is reached. This results in an astable operation with succeeding charge/discharge cycles. When the capacitance of the virtual capacitor increases, the charging time will also increase and vice-versa. Therefore, the capacitance is inversely proportional to the number of charging cycles in a given time span. In order to guard the sensor from measuring the capacitance to underlying objects, a shield is placed directly underneath the measuring electrode. The shield is driven with the same potential as the sensing electrode, such that the the capacitance between the two electrodes is neglectable. Using this shielding method, the measured capacitance will only be slightly affected by the grounded underlying arm.
 
-The proximity sensor board generates a clock signal with varying frequency depending on the proximity to body parts, objects and their characteristics. The HedgeHog therefore needs to measure the incoming frequency, which is implemented by counting the signal’s edges over the gate time of approximately 9.5ms.
+The proximity sensor board generates a clock signal with varying frequency depending on the proximity to body parts, objects and their characteristics. The HedgeHog therefore needs to measure the incoming frequency, which is implemented by counting the signal's edges over the gate time of approximately 9.5ms.
 
 pseudocode:
     sample the accelerometer sensor
@@ -100,18 +114,18 @@ read frequency count
 
 \subsection{Setup and Scenario}
 
-The expirement setup aims to depict a typical scenario in daily life. Especially in the field of Ambient Assisted Living (AAL), it is desired to monitor activities like drinking, preparing lunch and sleeping. A fine-grained monitoring of such activities may help elderly or people suffering from mental diseases to maintain a healthy day/night rhythm and take action if irregularities occur.
+The experiment setup aims to depict a typical scenario in daily life. Especially in the field of Ambient Assisted Living (AAL), it is desired to monitor activities like drinking, preparing lunch and sleeping. A fine-grained monitoring of such activities may help elderly or people suffering from mental diseases to maintain a healthy day/night rhythm and take action if irregularities occur.
 
-The recorded test set contains the following activities: opening door, sitting on a couch, lying on a couch, grasping into a locker, putting something from a shelf, sitting at the table, preparing a bread with marmalade, eating bread, mould water, drinking water and sleeping. Some of those activities are very hard to recognize without context information, just using wrist-worn accelerometer data. For example, sitting at the table and sitting on a couch are very similar activities. The data of a capacitive proximity sensor can extend this data basis by providing that is related to the material an object is made of.
+The recorded test set contains the following activities: opening door, sitting on a couch, lying on a couch, grasping into a locker, putting something from a shelf, sitting at the table, preparing a bread with marmalade, eating the bread, pouring water, drinking the water and sleeping. Some of those activities are very hard to recognize without context information, just using wrist-worn accelerometer data. For example, sitting at the table and sitting on a couch are very similar activities. The data of a capacitive proximity sensor can extend this data basis by providing that is related to the material an object is made of.
 
-\begin{figure}[htbp]
+\begin{figure}
 	\centering
 		\includegraphics[trim=2cm 0.5cm 2cm 0.5cm,width=1.00\textwidth]{Images/drinking.pdf}
 	\caption{Drinking activity}
 	\label{fig:drinking}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}
 	\centering
 		\includegraphics[trim=2cm 0.5cm 2cm 0.5cm,width=1.00\textwidth]{Images/making-bread.pdf}
 	\caption{Preparing bread}
@@ -120,9 +134,10 @@ The recorded test set contains the following activities: opening door, sitting o
 
 
 
+
 [EB: Hier plot von drinking und grasping into locker]
 
-Figure \ref{fig:drinking} depicts the data that was recorded for the activity drinking water. The accelerometer data shows that there periodic up- and down-movements while the capacitive proximity sensor delivers data that is associated to the proximity of the table. The second Figure \ref{fig:opendoor} illustrates a grasp into a locker while preparing lunch. It is obvious that the locker’s bottom surface that is located very closely to the wristband has an influence on the proximity sensor.
+Figure \ref{fig:drinking} depicts the data that was recorded for the activity drinking water. The accelerometer data shows that there periodic up- and down-movements while the capacitive proximity sensor delivers data that is associated to the proximity of the table. Figure \ref{fig:opendoor} illustrates a grasp into a locker while preparing lunch. It is obvious that the locker's bottom surface that is located very closely to the wristband has an influence on the proximity sensor.
 
 In order to evaluate if capacitive proximity sensors in wrist-bands can enhance the performance of activity recognition, we have conducted an evaluation with ten test persons. All test persons received a plot with the activities they were supposed to perform. After manual labeling, we used this test-set as ground truth and performed a cross-validation on an support-vector machine (SVM) classifier once with and once without including the data of the capacitive proximity sensor into the feature set.
 
@@ -137,7 +152,8 @@ The classifier was trained with various features that were extracted from window
 \section{Conclusion and Outlook}
 
 \section*{Acknowledgments}
-We would like to thank the students of TU Darmstadt and the employees of Fraunhofer IGD that lent us their sitting and lying abilities for the evaluation. 
+% We would like to thank the students of TU Darmstadt and the employees of Fraunhofer IGD that lent us their sitting and lying abilities for the evaluation. 
+We would like to thank our evaluation participants from the TU Darmstadt and the Fraunhofer IGD.
 
 \newpage
 
