added some drawings

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -12,6 +12,14 @@ journal = {Technology},
 title = {{Electric Field Imaging}},
 year = {1999}
 }
+@article{Smith1996,
+author = {Smith, J R},
+file = {:C$\backslash$:/Users/tgpuppen/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Smith - 1996 - Field mice Extracting hand geometry from electric field measurements.pdf:pdf},
+journal = {Group},
+title = {{Field mice : Extracting hand geometry from electric field measurements}},
+volume = {35},
+year = {1996}
+}
 @article{Wimmer2007,
 author = {Wimmer, Raphael and Kranz, Matthias and Boring, Sebastian and Schmidt, Albrecht},
 doi = {10.1109/PERCOM.2007.1},
