--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -64,7 +64,7 @@ year = {2007}
 }
 @inproceedings{berlin_laerhoven_tei_2010,
 	author = {Berlin, Eugen and Liu, Jun and van Laerhoven, Kristof and Schiele, Bernt},
-	title = {Coming to Grips with fhe Objects We Grasp: Detecting Interactions with Efficient Wrist-Worn Sensors},
+	title = {Coming to Grips with the Objects We Grasp: Detecting Interactions with Efficient Wrist-Worn Sensors},
 	booktitle = {Proceedings of the Fourth International Conference on Tangible, Embedded, and Embodied Interaction},
 	series = {TEI '10},
 	year = {2010},
