updated two images in the paper

--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -179,7 +179,7 @@ Capacitive proximity sensors represent a suitable new input modality for future 
 \section*{Acknowledgments}
 We would like to thank our evaluation participants from TU Darmstadt and Fraunhofer IGD.
 
-\newpage
+% \newpage
 
 \bibliographystyle{splncs03}
 \bibliography{references}
