updated two images

--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -144,14 +144,16 @@ The recorded test set contains the following activities: opening door, sitting o
 
 \begin{figure}
 	\centering
-		\includegraphics[trim=1.9cm 0.5cm 1.8cm 0.5cm,clip,width=\textwidth]{Images/drinking.pdf}
+% 		\includegraphics[trim=1.9cm 0.5cm 1.8cm 0.5cm,clip,width=\textwidth]{Images/drinking.pdf}
+		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_7.pdf}
 	\caption{An example of the ``drinking'' activity with raw 3D acceleration data (lower plot) and proximity sensor data (upper plot). The participant took five nips from the glass, while leaving the hands lying on the table in between. These motions can be easily detected in the acceleration as well as proximity data.}
 	\label{fig:drinking}
 \end{figure}
 
 \begin{figure}
 	\centering
-		\includegraphics[trim=1.9cm 0.5cm 1.8cm 0.5cm,clip,width=\textwidth]{Images/making-bread.pdf}
+% 		\includegraphics[trim=1.9cm 0.5cm 1.8cm 0.5cm,clip,width=\textwidth]{Images/making-bread.pdf}
+		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_5.pdf}
 	\caption{An example of the ``preparing bread'' activity, where the participants had to put marmalade on a toast. Note, that the acceleration data does not seem to have any characteristic patterns, while the proximity sensor indicates a table, plate, or other objects in immediate distance.}
 	\label{fig:making-bread}
 \end{figure}
