--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -59,8 +59,6 @@ Current wearable activity recognition systems are able to unobtrusively capture 
 
 Capacitive proximity sensors can indirectly measure the distance and nature of a grounded object within reach. This means that the measurement result depends on the object's distance, its size and the material it is made of. A wristband worn capacitive proximity sensor requires a shield that eliminates the influence of the grounded arm directly underneath the sensor. Using this setup, we can detect the proximity to a grounded object in the environments for distances up to 20 cm. Especially for mobile devices, it is required that the sensor only draws a very small amount of power. Thus, other proximity sensing input modalities like ultrasound or optical measurements are not applicable for this type of mobile application.
 
-[MB; EB: Introduction to HedgeHog device]
-
 There are several intuitive examples for which a combination of accelerometer-based activity recognition with a capacitive proximity sensor reveals its strength. For example, it may be conducted which material is placed underneath the hand. The capacitive proximity sensor would return a different measurement result for a hand placed on a couch covered with fabric than a hand placed a wooden table. Moreover, the approximate distance to objects can be exploited to identify activities like grasping into a locker or a refrigerator  to prepare food.
 
 \section{Related Work}
@@ -105,19 +103,16 @@ The sensor node itself is built around the low-power Microchip microcontroller (
 	\label{fig:sensornode}
 \end{figure}
 
-
 The 3D accelerometer sensor is being sampled at $100Hz$, resulting in 10ms equidistant measurements. For efficiency reasons, the sensor data is run-length encoded before being stored locally to the microSD card. The HedgeHog can be extended with further sensors tailoring different application scenarios. For our scenario, we have added a capacitive proximity sensor, which is described in detail in the next section.
 
 \subsection{Capacitive Proximity Sensor}
 
 The capacitive proximity sensor performs measurements in loading mode. Two electrodes are integrated into the wristband, one sensing electrode and one shielding electrode that aims to eliminate the influence of the arm that is a very proximate grounded object to the sensing electrode. The sensor draws a supply current of 1 mA at 3.3 V when active. This low power consumption qualifies the sensor for wearable proximity sensing applications. 
 
-image : photo
-
 \begin{figure}[htbp]
 	\centering
 		\includegraphics[width=1.00\textwidth]{Images/schematic.pdf}
-	\caption{The sensing circuit is based on a timer with an operational amplifier that acts as a voltage follower.}
+	\caption{The sensing circuit is based on a timer with an operational amplifier that acts as a voltage follower. The wire that is labeled with "`antenna"' leads to the sensing electrode, whereas the wire labeled with "`guard"' leads to the shield electrode.}
 	\label{fig:schematic}
 \end{figure}
 
@@ -138,13 +133,14 @@ This section presents the experimental setup including the activities and the pa
 
 \subsection{Setup and Scenario}
 
-The experiment setup aims to depict a typical scenario in daily life. Especially in the field of Ambient Assisted Living (AAL), it is desired to monitor activities like drinking, preparing lunch and sleeping. A fine-grained monitoring of such activities may help elderly or people suffering from mental diseases to maintain a healthy day/night rhythm and take action if irregularities occur.
+The experiment setup aims to depict a typical scenario in daily life. Especially in the field of Ambient Assisted Living (AAL), it is desired to monitor activities like drinking, preparing lunch and sleeping. A fine-grained monitoring of such activities may help elderly or people suffering from mental diseases to maintain a healthy day/night rhythm and take action if irregularities occur. Figure blubb shows the modified HedgeHog activity logger that has been extended with a capacitive proximity sensor. The wristband has two electrodes, a sensing electrode underneath a slightly bigger shield electrode. 
+
+[Hier Figure Aufbau]
 
 The recorded test set contains the following activities: opening door, sitting on a couch, lying on a couch, grasping into a locker, putting something from a shelf, sitting at the table, preparing a bread with marmalade, eating the bread, pouring water, drinking the water and sleeping. Some of those activities are very hard to recognize without any further contextual information, when the data is limited to a single modality like a 3D accelerometer. For example, sitting at the table and sitting on a couch are very similar activities. The data of a capacitive proximity sensor can extend this data basis by providing that is related to the material an object is made of.
 
 \begin{figure}
 	\centering
-% 		\includegraphics[trim=1.9cm 0.5cm 1.8cm 0.5cm,clip,width=\textwidth]{Images/drinking.pdf}
 		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_7.pdf}
 	\caption{An example of the ``drinking'' activity with raw 3D acceleration data (lower plot) and proximity sensor data (upper plot). The participant took five nips from the glass, while leaving the hands lying on the table in between. These motions can be easily detected in the acceleration as well as proximity data.}
 	\label{fig:drinking}
@@ -152,7 +148,6 @@ The recorded test set contains the following activities: opening door, sitting o
 
 \begin{figure}
 	\centering
-% 		\includegraphics[trim=1.9cm 0.5cm 1.8cm 0.5cm,clip,width=\textwidth]{Images/making-bread.pdf}
 		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_5.pdf}
 	\caption{An example of the ``preparing bread'' activity, where the participants had to put marmalade on a toast. Note, that the acceleration data does not seem to have any characteristic patterns, while the proximity sensor indicates a table, plate, or other objects in immediate distance.}
 	\label{fig:making-bread}
@@ -160,11 +155,9 @@ The recorded test set contains the following activities: opening door, sitting o
 
 Figure \ref{fig:drinking} depicts the data that was recorded for the activity drinking water. The accelerometer data shows that there periodic up- and down-movements while the capacitive proximity sensor delivers data that is associated to the proximity of the table. Figure \ref{fig:making-bread} illustrates the preparation of a bread with marmalade while preparing lunch. It is obvious that the capacitive proximity sensor's data provides valuable information about the distance of the wristband to the table. 
 
-In order to evaluate if capacitive proximity sensors in wrist-bands can enhance the performance of activity recognition, we have conducted an evaluation with ten test persons. All test persons received a plot with the activities they were supposed to perform. After manual labeling, we used this test-set as ground truth and performed a cross-validation on an support-vector machine (SVM) classifier once with and once without including the data of the capacitive proximity sensor into the feature set.
+In order to evaluate if capacitive proximity sensors in wrist-bands can enhance the performance of activity recognition, we have conducted an evaluation with seven test persons. All test persons received a plot with the activities they were supposed to perform. After manual labeling, we used this test-set as ground truth and performed a 4-fold cross-validation on an support-vector machine (SVM) classifier once with and once without including the data of the capacitive proximity sensor into the feature set. We used an SVM classifier because of its high relevance in activity recognition and its fast performance. 
 
-[EB MB: kurze Einführung in SVMs]
-
-The classifier was trained with various features that were extracted from windows with the length of 5 seconds. In order to suppress noise contained in the capacitive proximity sensing data, we applied a Gaussian kernel with a size of [TODO] samples. The final feature set contained the arithmetic mean and standard variance of both accelerometer and proximity data. Moreover, we included the median, min and max features for both modalities.
+The classifier was trained with various features that were extracted from windows with the length of 1 second. It turned out that greater window sizes do not provide better results. In order to suppress noise contained in the capacitive proximity sensing data, we applied a moving average filter with a kernel size of 10. The final feature set contained the arithmetic mean and standard variance of both accelerometer and proximity data. These simple feature types represent standard features applied in activity recognition.
 
 \subsection{Evaluation Results}
 
