updated features and images - features now with marker as class 99 - fixed annotations for eugen dataset - updated activity plots

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -87,3 +87,13 @@ year = {2007}
 	address = {New York, NY, USA},
 	keywords = {gesture detection, wearable interaction, wrist-worn RFID},
 } 
+@article{wyss2010recognition,
+  title={Recognition of Military-Specific Physical Activities With Body-Fixed Sensors},
+  author={Wyss, T. and Mader, U.},
+  journal={Military medicine},
+  volume={175},
+  number={11},
+  pages={858--864},
+  year={2010},
+  publisher={AMSUS-Association of Military Surgeons of the US}
+}
